This file documents the revision history for the Monitoring Webinterface Thruk.

1.1.3    Sat Nov 12 23:03:12 CET 2011
          - added support for objects in config editor
          - added support for contactgroups in the cgi.cfg
          - added support for groups in the cgi.cfg config tool
          - command_disabled supports ranges
          - hide links to cmd.cgi which are disabled by the command_disabled option
          - backends can only be hidden by config if there are more than one
          - show backend related errors as backend chooser tooltip and in process info page
          - fixed hiding filter select popup
          - fixed sorting by duration on status page

1.1.2    Tue Oct 18 17:57:53 CEST 2011
          - added /pnp/ to possible pnp4nagios urls
          - search in notes_url for pnp4nagios urls too
          - replaced deprecated Catalyst::Log::Log4perl
          - fixed commands using the hours parameter (fixes #50)
          - fixed redirect when adding ?nav=1 while using frames

1.1.1    Thu Sep 15 14:30:01 CEST 2011
          - added dashboard plugin (Thanks Sigma)
          - disabled not implemented config view (fixes #46)
          - fixed shift in table of config host page (fixes #49)

1.1.0    Sun Aug 21 19:12:18 CEST 2011
          - availability / trends are now calculated in a background process
            - less ressources and independent from browser ttl
          - excel export run as bg job
          - added config option 'show_custom_vars'
          - added host command 'Schedule downtime for all services on this host'
          - added excel export for notifications
          - added new host properties filter 'in_check_priod' and 'in_notification_period'
          - added new service properties filter 'in_check_priod' and 'in_notification_period'
          - added new filter options 'Check Period' and 'Notification Period'
          - added new filter option 'Has Modified Attributes'